fix: fix overflow problem

--- a/shelter/pages/main/style.scss
+++ b/shelter/pages/main/style.scss
@@ -1,5 +1,20 @@
 // @import "breakpoints";
 
+html{
+
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+body
+{
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+
 $breakpoints: (
   "size-medium": 1279px,
   "size-small": 767px,  
